code/k8s/010/rateLimit/ingress-nginx-rate-limit-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speed-deploy
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: speed
  template:
    metadata:
      labels:
        app: speed
    spec:
      containers:
        - name: myapp
          image: nginx:1.29.0
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: speed-svc
spec:
  selector:
    app: speed
  type: ClusterIP
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
