code/k8s/010/rateLimit/ingress-nginx-rate-limit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speed-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "10"  # 每秒最多 10 个请求
    nginx.ingress.kubernetes.io/limit-whitelist: "10.20.1.140,192.168.6.0/24"  # 这些 IP 范围免于速率限制
spec:
  rules:
    - host: rate.limit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speed-svc
                port:
                  number: 80
